app/assets/stylesheets/static_pages.scss
body {
  background-color: #232f63 !important;
  font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
}

.col-xs-12 {
  color: white;
  padding-left: 0px !important;
  padding-right: 0px !important;
}

.header {
  height: 157px;
  background-color: #f48d4e;
  margin-right: -100px;
}

.header img {
  position: relative;
  top: 33px;
  width: 137px;
  left: -40px;
  z-index: 1;
}

.highlight {
  font-size: 1.5em;
  padding: 180px 0px 0px 0px;
  font-color: white !important;
  background: url(../images/dami_hero.png) no-repeat center center scroll;
  background-size: 1765px 900px;
  height: 620px;
  width: 109%;
}


.highlight p {
  max-width: 800px;
  text-align: center;
  margin: 0 auto;
}

.content_block {
  margin: 0 auto;
}

.sub_title {
  line-height: 30px;

}
.bio_pic {
  width: 1000px;
  float: left;
}

.bio_pic img {
  padding-left: 60px;
  padding-top: 10px;
  padding-bottom: 20px;
}

.sub_title_wrapper {
  margin-left: -1000px;
  margin-right: -1000px;
}
.sub_title_why {
  background-color: #315e92;
  padding-left: 1000px;
  padding-right: 1000px;
  padding-top: 20px;
  padding-bottom: 20px

}

.sub_title_how {
  background-color: #232f63;
  margin: 0 auto;
}


.bullet {
  background-color: rgba(61, 162, 235, 0.2);
  padding: 4px;
}


.title {
  font-weight: bold;
  padding: 20px 0px 0px 0px;
  color: rgb(54, 93, 209);
}



/* Vertical Navbar */

nav{
  margin-top:-170px;
}

nav:after{
  clear:both;
}
nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  width:260px;
}


nav li a {
  color:white;
  display:table;
  background-color: #f48d4e;
  margin-bottom:3px;
  height:40px;
  text-indent:55px;
  padding-right: 20px;
  line-height: 40px;
  font-size:18px;
}

nav li a:hover{
  background-color: #6496cc;
  text-decoration: none;
  color:white;
  text-indent:75px;
  padding-right: 35px;
}

.active a{
  background-color:white;
  color:#f48d4e;
  display:inline-block;
  position:relative;
}

.active a:hover{
  background-color:white;
  color:#f48d4e;
  display:inline-block;
  position:relative;
  text-indent:55px;
  padding-right: 20px;

}

.active a:after {
  content: '';
  display: block;
  position: absolute;
  left: 100%;
  top: 50%;
  margin-top: -20px;
  width: 0;
  height: 0;
  border-top: 20px solid transparent;
  border-right: 0px solid transparent;
  border-bottom: 20px solid transparent;
  border-left: 20px solid white;
}


/* Horizontal Navbar */


#navigation{
  position: absolute;
  top:-500px;
  background-color: #f48d4e;
  color:white;
  padding:0;
  margin:0;
}


#nav_partial{
  position:fixed;
  top:0;
  z-index: 10;
  width: 100%;
  height: 40px;
}

#navigation.affix {
  position: fixed;
  top: 0;
  width: 102%;
  z-index:10;
}

.nav{
  background-color: #f48d4e;
  width:102%;
  text-align: center;
  margin: 0 auto;
}

.nav a{
  color:white;
}

.nav-tabs{
  border:none !important;
  margin:0;
  padding:0;
}

.nav ul{

}

.nav-tabs>li {
  float: none !important;
  display:inline-block  !important;
}


.nav-tabs > li > a:hover{
  background-color: #6496cc !important;
  border: medium none;
  border-radius: 0;
  color:#fff;
}

